[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
leafwing-input-manager = "0.3.0"
leafwing_input_manager_macros = "0.3.0"
serde = "1.0.136"
derive_more = "0.99.17"
ron = "0.7.0"
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
fastrand = { version = "1.7.0", optional = true }
iyes_loopless = "0.5.1"
bevy_egui = "0.14.0"
ron-config = { git = "https://github.com/Azkarell/ron_config.git" }
#ron-config = { path = "../ron-config" }
[features]
default = ["fastrand"]
